--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
+.idea/
+.eclipse/
+*.iml
+*.ipr
+*.iws
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
+classes/
+*~
+listing/
+*.versionsBackup
+*.patch
+.settings.xml
+.project
+.classpath
+.settings
