--- a/pom.xml
+++ b/pom.xml
@@ -132,8 +132,8 @@
 				<version>3.3</version>
 				<configuration>
 					<encoding>utf8</encoding>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>${java.language.version}</source>
+					<target>${java.language.version}</target>
 				</configuration>
 			</plugin>
 			
