--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,10 @@ listing/
 .project
 .classpath
 .settings
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
