IA-652: add plugin configuration for cargo and cacheLocation filtering

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,59 @@
 					</execution>
 				</executions>
 			</plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <escapeString>\</escapeString>
+                </configuration>
+            </plugin>
+
+            <!-- plugins needed to parse properties in cache location path -->
+            <plugin>
+                <groupId>com.keyboardsamurais.maven</groupId>
+                <artifactId>maven-timestamp-plugin</artifactId>
+                <version>1.0</version>
+                <configuration>
+                    <propertyName>buildNumber</propertyName>
+                    <timestampPattern>yyyyMMddHHmm</timestampPattern>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- deploy to development server -->
+            <plugin>
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.2.1</version>
+
+                <configuration>
+
+                    <!-- Container configuration -->
+                    <container>
+                        <containerId>tomcat7x</containerId>
+                        <type>remote</type>
+                    </container>
+
+                    <!-- Configuration to use with the container -->
+                    <configuration>
+                        <type>runtime</type>
+                        <properties>
+                            <cargo.remote.username>${dev.deploy.username}</cargo.remote.username>
+                            <cargo.remote.password>${dev.deploy.password}</cargo.remote.password>
+                            <cargo.remote.uri>${dev.deploy.uri}</cargo.remote.uri>
+                        </properties>
+                    </configuration>
+                </configuration>
+            </plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
