--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
 		<java.language.version>1.7</java.language.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<gwt-version>2.7.0</gwt-version>
-		
+
+        <geomajas-deskmanager-client-version-geomajas-server>1.18.2</geomajas-deskmanager-client-version-geomajas-server>
 		<geomajas-deskmanager-version>1.0.0-SNAPSHOT</geomajas-deskmanager-version>
 		<geomajas-build-tools-version>2.5.0</geomajas-build-tools-version>
 	</properties>
@@ -58,6 +59,13 @@
 
 	<dependencyManagement>
 		<dependencies>
+            <dependency>
+                <groupId>org.geomajas.project</groupId>
+                <artifactId>geomajas-project-server</artifactId>
+                <version>${geomajas-deskmanager-client-version-geomajas-server}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
 			<dependency>
 				<groupId>org.geomajas.project</groupId>
 				<artifactId>geomajas-project-deskmanager-gwt</artifactId>
@@ -142,13 +150,13 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 				<version>6.1.20</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.mortbay.jetty</groupId>
-						<artifactId>servlet-api-2.5</artifactId>
-						<version>6.1.14</version>
-					</dependency>
-				</dependencies>
+				<!--<dependencies>-->
+					<!--<dependency>-->
+						<!--<groupId>org.mortbay.jetty</groupId>-->
+						<!--<artifactId>servlet-api-2.5</artifactId>-->
+						<!--<version>6.1.14</version>-->
+					<!--</dependency>-->
+				<!--</dependencies>-->
 				<configuration>
 					<webAppConfig>
 						<contextPath>/</contextPath>
@@ -164,28 +172,22 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
 				<version>${gwt-version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>com.google.gwt</groupId>
-						<artifactId>gwt-user</artifactId>
-						<version>${gwt-version}</version>
-					</dependency>
-					<dependency>
-						<groupId>com.google.gwt</groupId>
-						<artifactId>gwt-dev</artifactId>
-						<version>${gwt-version}</version>
-					</dependency>
-				</dependencies>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.google.gwt</groupId>
+                        <artifactId>gwt-user</artifactId>
+                        <version>${gwt-version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>com.google.gwt</groupId>
+                        <artifactId>gwt-dev</artifactId>
+                        <version>${gwt-version}</version>
+                    </dependency>
+                </dependencies>
 				<configuration>
-					<!-- <disableCastChecking>true</disableCastChecking> <disableClassMetadata>true</disableClassMetadata> -->
-					<extraJvmArgs>-Xmx768M -Xss1024k</extraJvmArgs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>gwt-maven-plugin</artifactId>
-				<version>${gwt-version}</version>
-				<configuration>
+                    <disableCastChecking>true</disableCastChecking>
+                    <disableClassMetadata>true</disableClassMetadata>
+                    <extraJvmArgs>-Xmx1200M -Xss1024k</extraJvmArgs>
 					<modules>
 						<module>org.geomajas.project.deskmanager.quickstart.QuickstartManagerEntryPoint</module>
 						<module>org.geomajas.project.deskmanager.quickstart.QuickstartGeodeskEntryPoint</module>
@@ -214,11 +216,8 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <escapeString>\</escapeString>
-                </configuration>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.8</version>
             </plugin>
 
             <!-- plugins needed to parse properties in cache location path -->
@@ -237,6 +236,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <escapeString>\</escapeString>
+                </configuration>
             </plugin>
 
             <!-- deploy to development server -->
@@ -341,6 +348,30 @@
 	</pluginRepositories>
 	
 	<profiles>
+        <!-- m2eclipse with embedded jetty -->
+        <profile>
+            <id>m2e</id>
+            <activation>
+                <property>
+                    <name>m2e.version</name>
+                </property>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>org.geomajas</groupId>
+                    <artifactId>geomajas-jetty-runner</artifactId>
+                    <version>${geomajas-build-tools-version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.google.gwt</groupId>
+                    <artifactId>gwt-dev</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+            <properties>
+                <gwt.compiler.skip>true</gwt.compiler.skip>
+            </properties>
+        </profile>
 		<profile>
 			<id>skipGwt</id>
 			<activation>
